# Mac_grid

./: .gitignore  .gitmodules  imgui.ini  mac_smoke  mac_smoke.cpp  main.cpp  offline_main.cpp
gaussian_splatting/: extract_video_frames.py
gaussian_splatting/2d-gaussian-splatting/: .gitignore  .gitmodules  README.md  convert.py  environment.yml  train.py  view.py
gaussian_splatting/2d-gaussian-splatting/.git.bak/: config  index  packed-refs
gaussian_splatting/2d-gaussian-splatting/Pipe_photos/: run-colmap-geometric.sh  run-colmap-photometric.sh
gaussian_splatting/2d-gaussian-splatting/arguments/: __init__.py
gaussian_splatting/2d-gaussian-splatting/gaussian_renderer/: __init__.py
gaussian_splatting/2d-gaussian-splatting/roblox_pipes/: frame_manifest.csv
gaussian_splatting/2d-gaussian-splatting/scene/: __init__.py  cameras.py  gaussian_model.py
gaussian_splatting/2d-gaussian-splatting/scripts/: dtu_eval.py  m360_eval.py  nerf_eval.py  summary.py  tnt_eval.py
gaussian_splatting/2d-gaussian-splatting/utils/: camera_utils.py  general_utils.py
gaussian_splatting/dynamic_capture/: README.md  extract_fluid_state.py  inspect_geometry.py  prep_video_for_deformable_gs.py  requirements.txt
gaussian_splatting/dynamic_capture/captured_states/: manifest.json
gaussian_splatting/extraction/: .gitignore  README.md  extract_pipe.py  requirements.txt
gaussian_splatting/extraction/pipeline/: __init__.py  blueprint_writer.py  centerline.py  crop_interactive.py  cylinder_fit.py  denoise.py  io_ply.py  mesh_refine.py
gaussian_splatting/fluid_capture/: .gitignore  README.md  bridge_to_sim.py  capture_fluid.py  requirements.txt
gaussian_splatting/fluid_capture/pipeline/: __init__.py  bridge.py  debug_viz.py  depth.py  flow.py  frames.py  lift.py  preview.py  segmentation.py  state_writer.py  voxelize.py
iterations/smoke_2/frames/: frame_0000.ppm  frame_0001.ppm  frame_0002.ppm  frame_0003.ppm  frame_0004.ppm  frame_0005.ppm  frame_0006.ppm  frame_0007.ppm  frame_0008.ppm  frame_0009.ppm  frame_0010.ppm  frame_0011.ppm  frame_0012.ppm  frame_0013.ppm  frame_0014.ppm  frame_0015.ppm  frame_0016.ppm  frame_0017.ppm  frame_0018.ppm  frame_0019.ppm  frame_0020.ppm  frame_0021.ppm  frame_0022.ppm  frame_0023.ppm  frame_0024.ppm  frame_0025.ppm  frame_0026.ppm  frame_0027.ppm  frame_0028.ppm  frame_0029.ppm  frame_0030.ppm  (+149 more)
macgrid/: macgrid
pipe_engine/: CMakeLists.txt  build_cli.sh  build_gui.sh
pipe_engine/Blueprint/: blueprint_parser.h
pipe_engine/Geometry/: math_constants.h  mesh_generator.h  obj_exporter.h  pipe_network.h  pipe_segment.h  vec3.h
pipe_engine/Renderer/: camera.h  gl_loader.h  mesh_renderer.h
pipe_engine/UI/: pipe_panels.h
pipe_engine/Voxelizer/: voxelizer.h
pipe_engine/build_gui/: CMakeCache.txt  Makefile  PipeEngine  PipeEngineGUI  cmake_install.cmake  compile_commands.json  pipe_engine_layout.ini
pipe_engine/build_gui/examples/: industrial_riser.pipe  simple_L.pipe
pipe_engine/build_gui/glfw_local/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
pipe_engine/build_gui/glfw_local/src/: Makefile  cmake_install.cmake  glfw3.pc  glfw_config.h
pipe_engine/build_gui/output/: simple_L_pipe.stl
pipe_engine/examples/: industrial_riser.pipe  simple_L.pipe
pipe_engine/generated_meshes/: demo_S_pipe.stl  demo_U_pipe.stl  demo_riser.stl  industrial_riser.stl
pipe_engine/output/: demo_L_pipe.stl
pipe_engine/src/: main.cpp  main_gui.cpp
pipe_fluid_engine/: CMakeLists.txt  build_gui.sh  pipe_fluid_layout.ini
pipe_fluid_engine/build_gui/: CMakeCache.txt  Makefile  PipeFluidEngine  cmake_install.cmake  compile_commands.json
pipe_fluid_engine/build_gui/glfw_local/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
pipe_fluid_engine/build_gui/glfw_local/src/: Makefile  cmake_install.cmake  glfw3.pc
pipe_fluid_engine/examples/: demo_L.pipe  demo_U.pipe
pipe_fluid_engine/include/pipe_fluid/: blueprint_loader.h  fluid_state_loader.h  pipe_boundary_field.h  pipe_fluid_scene.h  pipe_solid_adapter.h  pipe_solver_boundary_data.h  volume_renderer.h
pipe_fluid_engine/src/: blueprint_loader.cpp  cpu_volume_renderer.cpp  fluid_state_loader.cpp  gpu_volume_renderer.cpp  pipe_boundary_field.cpp  pipe_fluid_scene.cpp  pipe_solid_adapter.cpp  pipe_solver_boundary_data.cpp  volume_renderer.cpp
pipe_fluid_engine/viewer/: main_gui.cpp
sim/: mac_smoke_sim.cpp  mac_smoke_sim.h
smoke_engine/: .gitignore  CMakeLists.txt  imgui.ini  run.sh  run_cuda.sh  run_cuda_diag.sh  run_diag.sh  vizior_layout.ini
smoke_engine/Renderer/: smoke_renderer.cpp  smoke_renderer.h
smoke_engine/Sim/: chunk_worker_pool.h  mac_coupled_sim.cpp  mac_coupled_sim.h  mac_grid_core.cpp  mac_grid_core.h  mac_smoke3d.cpp  mac_smoke3d.h  mac_smoke_sim.h  mac_smoke_sim_advection.cpp  mac_smoke_sim_boundaries.cpp  mac_smoke_sim_core.cpp  mac_smoke_sim_forces.cpp  mac_smoke_sim_pipe.cpp  mac_smoke_sim_pressure.cpp  mac_smoke_sim_sampling.cpp  mac_water3d.cpp  mac_water3d.h  mac_water_sim.cpp  mac_water_sim.h  pressure_solver.cpp  pressure_solver.h  pressure_solver3d.cpp  pressure_solver3d.h  sim_stage_timing.h  smoke_diag.h  smoke_diagnostics.h  smoke_profiles.h  text_mask.cpp  text_mask.h
smoke_engine/Sim/Water/: water_common.h  water_grid.h  water_particles.h  water_pressure.h  water_rasterize.h  water_solids.h
smoke_engine/Sim/Water3D/: IMPLEMENTATION_STATUS.md  water3d_common.h  water3d_cuda_backend.cu  water3d_cuda_backend.h  water3d_fields.h  water3d_grid.h  water3d_particles.h  water3d_pressure.h  water3d_slices.h  water3d_solids.h
smoke_engine/UI/: panels.cpp  panels.h
smoke_engine/assets/branding/: README.md
smoke_engine/build_diag/: CMakeCache.txt  Makefile  SmokeEngine  Water3DBackendCompare  cmake_install.cmake  compile_commands.json
smoke_engine/build_diag/glfw_local/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
smoke_engine/build_diag/glfw_local/src/: Makefile  cmake_install.cmake  glfw3ConfigVersion.cmake
smoke_engine/offline_bakes/latest/: job.txt
smoke_engine/src/: main.cpp
smoke_engine/tools/: water3d_backend_compare.cpp
(+31 files in other folders)
